--- a/sistemas operacionais.html
+++ b/sistemas operacionais.html
@@ -19,14 +19,12 @@
             <li><a href="#link3">processador</a></li>
             <li><a href="#link4">memoria cache</a></li>
             <li><a href="#link5">barramento</a></li>
-
         </ul>
     </header>
     <div id="link1">
         <h1>
             sistemas operacionais
         </h1>
-
         <p>
             O sistema operacional então serve de interface entre o ususario e os recursos de hardware,
             tornando esta comunicação transparente ou imperceptivel e permitindo ao usuario um trabalho mais eficiente e
@@ -75,11 +73,10 @@
             memória individual.
         </p>
     </div>
-
     <hr>
     <aside>
-        <img src="imagen para o site SO/SO1.png" alt="introdução a sistemas operacionais">
-        <img src="imagen para o site SO/SO hardware .png" alt="hardware">
+        <img src="imagens/SO1.png" alt="introdução a sistemas operacionais">
+        <img src="imagens/SOhardware.png" alt="hardware">
     </aside>
     <hr>
     <div>
@@ -117,8 +114,6 @@
             processadores são iguais podemos chama-los sistema simetrico, mas quando são processadores diferentes
             chamados
             assimetricos.
-
-
         </p>
         <a href="#inicio">volte para o topo da pagina</a>
     </div>
@@ -144,10 +139,9 @@
         memória.
         <br>MAR => memory address register, através do conteúdo deste registrador a unidade de controle sabe qual a
         célula de memória que será acessada.
-
     </p>
     <aside>
-        <img src="imagen para o site so/mar e mbr.png" alt="opção de leitura e opção de gravação">
+        <img src="imagens/marembr.png" alt="opção de leitura e opção de gravação">
     </aside>
     <section class="section">
         <h4 id="link4">Memoria cache: É uma memória volátil, com alta velocidade, porém, pequena capacidade de
@@ -171,14 +165,14 @@
         <a href="#inicio">volte para o topo da pagina</a>
     </section>
     <aside>
-        <img src="imagen para o site SO/memorias.png" alt="tipos de memorias">
+        <img src="imagens/memorias.png" alt="tipos de memorias">
     </aside>
     <h4 id="link5">barramento</h4>
     <p>
         É o meio de comunicação compartilhado que permite a comunicação entre as unidades funcionais de um sistema
         computacional.
     </p>
-    <img src="imagen para o site so/barramento.png" alt="barramento">
+    <img src="imagens/barramento.png" alt="barramento">
     <h4>tipos de barramentos</h4>
     <dl>
         <dt> Barramentos processador-memória</dt>
@@ -213,29 +207,25 @@
             Muitas vezes são construídos diretamente no backplane da máquina (placa-mãe);
             São padronizados;
             Necessidade de uma lógica adicional para interface barramento de backplane-dispositivo.
-
         </dd>
     </dl>
     <h4>Máquinas com barramento único</h4>
-    <img src="imagen para o site so/processador.png" alt="barramento">
+    <img src="imagens/processador.png" alt="barramento">
     <h4>Máquinas com barramento memória-processador separado do barramento de E/S</h4>
-    <img src="imagen para o site so/processador1.png" alt="barramento">
+    <img src="imagens/processador1.png" alt="barramento">
     <h4>pipelining</h4>
-    <img src="imagen para o site so/pipelining.png" alt="pipelining">
+    <img src="imagens/pipelining.png" alt="pipelining">
     <h4>arquitetura risc e cisc</h4>
     <p>
         RISC – Reduced Instruction Set Computer
         Um processador com essa arquitetura se caracteriza por possui poucas instruções de máquina, em geral bastante
         simples, que são executadas diretamente pelo hardware.
-
     </p>
     <p>
         CISC – Complex Instruction Set Computer
         Possuem instruções mais complexas que são interpretadas por microprogramas
-
     </p>
-    <img src="imagen para o site so/risc e cisc.png" alt="risc e cisc">
+    <img src="imagens/riscecisc.png" alt="risc e cisc">
     <a href="#inicio">volte para o topo da pagina</a>
 </body>
-
 </html>
